| Summary: | ASTERISK-25259: chan_pjsip: Add rtptimeout support | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-07-16 11:02:24 | Date Closed: | 2015-07-24 12:10:12 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip_sdp_rtp |
| Versions: | 13.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The chan_sip module currently has the ability to monitor RTP traffic and when a sufficient lapse occurs to terminate the call, under the presumption that the call is likely hung up but we have not received signaling. This feature has not yet been implemented in chan_pjsip and this issue is to track adding it.
Two options should be added to endpoints: rtp_timeout rtp_hold_timeout This will control the amount of time (in seconds) before we terminate a channel due to receiving no media. | ||
| Comments: | |||